# Rust-Actix-Web-viewRendering

./: .gitignore  Cargo.toml  README.md  diesel.toml  index.html
src/: .gitignore  lib.rs  main.rs  schema.rs
src/controllers/: camisas_controller.rs  mod.rs  welcome_controller.rs
src/dao/: db_connection.rs  mod.rs
src/dao/abstract_structures/: dao.rs  mod.rs  paginated_query.rs
src/dao/abstract_traits/: db_methods.rs
src/migrations/2024-07-14-035629_create_camisas/: down.sql  up.sql
src/migrations/2024-07-14-035633_create_calcas/: down.sql  up.sql
src/models/calcas/: calca.rs  calca_dto.rs  mod.rs
src/models/camisas/: camisa.rs  camisa_dto.rs  mod.rs
src/services/: mod.rs
src/services/calcas/: dao_calca.rs  mod.rs
src/services/camisas/: cadastro.rs  camisas_count.rs  dao_camisa.rs  listagem.rs  mod.rs
view/src/components/: Footer.vue  Header.vue
